# snapmap-archiver

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt  setup.py  snapmap_archiver.py
snapmap_archiver/: Coordinates.py  SnapmapArchiver.py  __init__.py  __main__.py  coordinates.py  get_data.py  snap.py  time.py
snapmap_archiver/utils/: __init__.py  user-agents.json
