[tool.poetry]
name = "snapmap-archiver"
version = "1.2.0"
description = "Download all Snapmaps content from a specific location."
authors = ["king-millez <Millez.Dev@gmail.com>"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
