[tool.poetry]
name = "snapmap-archiver"
version = "2.1.0"
description = "Download all Snapmaps content from a specific location."
readme = "README.md"
authors = ["Miles Greenwark <Millez.Dev@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
