[tool.poetry]
name = "snapmap-archiver"
version = "2.4.0"
description = "Download all Snap Map content from a specific location."
readme = "README.md"
authors = ["Miles Greenwark <Millez.Dev@gmail.com>"]
license = "GPL-3.0-or-later"
packages = [{include = "snapmap_archiver"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
alive-progress = "^3.1.5"
loguru = "^0.7.2"
httpx = "^0.27.0"
aiofiles = "^23.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
snapmap-archiver = "snapmap_archiver.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
